--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>notes app</title>
+    <title>NotesApp</title>
 
     {{!-- bottstrap 4 --}}
     <link rel="stylesheet" href="/css/bootstrap.css">
