--- a/src/views/partials/messages.hbs
+++ b/src/views/partials/messages.hbs
@@ -18,7 +18,7 @@
 
 {{#if errorMsg}}
     <div class="alert alert-danger alert-dismissible fade show" role="alert">
-        {{error}}
+        {{errorMsg}}
         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
             <span aria-hidden="true">&times;</span>
         </button>
